Overflow in quiz topic solve

--- a/topics/style.css
+++ b/topics/style.css
@@ -34,7 +34,7 @@ p {
 
 .container {
   width: 100vw;
-  height: 130vh;
+  height: 150vh;
   display: flex;
   justify-content: center;
   align-items: center;
